--- a/page2.html
+++ b/page2.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Covid 19 Dashboard</title>
+    <title>Interactive Maps</title>
 
     <!-- Bootstrap CDN -->
     <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous"
     />
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -29,24 +29,19 @@
             <a class="navbar-brand" href="index.html">Home</a>
             <a class="nav-item nav-link" href="page2.html">Interactive Maps</a>
         </nav>
-        <!-- The jumbotron div -->
-        <div class='jumbotron'>
-            <h1>Covid-19 Dashboard</h1>
-        </div>
-        <!-- The goals and purpose div -->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-1">
-                    <h3>Purpose</h3>
-                  </div>
-                  <div class="col-md-11">
-                    <p>
-                      The purpose of this dashboard is to...
-                    </p>
-            </div>
-          </div>
-        </div>
-    </div>  
+    </div>
+    <!-- The div that holds our map -->
+    <div id="mapid"></div>
 
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>  
 </body>
 </html>
