--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Maps</title>
+    <title>Interactive Charts</title>
 
     <!-- Bootstrap CDN -->
     <link
@@ -31,7 +31,6 @@
             <a class="nav-item nav-link" href="page3.html">Interactive Charts</a>
         </nav>
     </div>
-
     <div class="container-fluid">
         <div class="row">
             <div class='col-md-3'> <!--Build the filter button-->
@@ -46,19 +45,7 @@
                 </ul>
             </div>  
         </div>
-    </div>            
-    <!-- The div that holds our map -->
-    <div id="mapid"></div>
-
-    <!-- Leaflet JavaScript -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-
-    <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
-    <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/logic.js"></script> 
-    <!-- <script type="text/javascript" src="static/js/data.js"></script> -->
+    </div>  
+    <h1>Put Charts Here</h1>
 </body>
 </html>
